# maccinny

./: .gitignore  README.md  README.zh-CN.md  config.json  index.html  package-lock.json  package.json  vite.config.js
.github/release-notes/: v1.4.3.md  v1.4.4.md  v1.4.5.md  v1.4.6.md  v1.4.7.md
.github/workflows/: macos-desktop.yml
public/locales/: zh.json
src/: ext.d.ts  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop_media_cache.rs  main.rs
src/app/components/: AccountDataEditor.tsx  AuthorContactButton.tsx  BackupRestore.tsx  BetaNoticeBadge.tsx  ClientConfigLoader.tsx  DeviceVerificationSetup.tsx  Editor.css.ts  ImageOverlay.tsx  JoinRulesSwitcher.tsx  LogoutDialog.tsx  ReleaseNotes.css.ts  ReleaseNotes.tsx  RenderMessageContent.tsx  RoomNotificationSwitcher.tsx
src/app/constants/: branding.ts  projectInfo.ts
src/app/hooks/: useAnimatedMediaPreview.ts  useCachedMediaUrl.ts  useClientConfig.ts  useCommands.ts  useDateFormat.ts  useDisplayMediaUrl.ts  useDragScroll.ts  useFavoritesRoom.ts  useFileDrop.ts  useFilePicker.ts  useImagePacks.ts  useMemberFilter.ts  useMemberSort.ts  useMessageLayout.ts  useMessageSpacing.ts  usePan.ts  usePermission.ts  usePinLockSnapshot.ts  usePowerLevelTags.ts  useResilientAvatarMedia.ts  useRestoreBackupOnVerification.ts  useRoomCreatorsTag.ts  useRoomEventReaders.ts  useRoomLatestRenderedEvent.ts  useRoomMembers.ts  useScreenSize.ts  useTheme.ts
src/app/pages/: CallStatusRenderer.tsx  (+5 more)
src/client/: initMatrix.ts
(+332 files in other folders)
