[package]
name = "maccinny-desktop"
version = "1.4.7"
description = "MacCinny macOS desktop client"
authors = ["MacCinny contributors"]
license = "AGPL-3.0-only"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
rfd = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["image-png"] }
tauri-plugin-notification = "2"
